--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 numpy==1.24.3
 pandas==2.0.3
 xgboost==2.0.2
 requests==2.31.0
-python-multipart==0.0.6
